--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,28 +16,31 @@
   <body>
     <div class="wrapper">
       <header>
-        <!-- 重构后的路径导航 -->
+        <!-- 修复后的路径导航 -->
         <div class="path-nav">
+          {% comment %} 新增仓库名路径段 {% endcomment %}
+          {% assign base_segments = site.baseurl | split: '/' %}
+          {% assign path_segments = page.dir | split: '/' %}
+          
+          {% comment %} 合并基础路径和页面路径 {% endcomment %}
+          {% assign all_segments = base_segments | concat: path_segments | uniq %}
+          
           <nav class="breadcrumb">
             <a href="{{ '/' | relative_url }}">Home</a>
-            {% assign path_segments = page.dir | remove_first: site.baseurl | split: '/' %}
-            
-            {% assign accumulated_path = site.baseurl %}
-            {% for segment in path_segments %}
+            {% assign accumulated_path = "" %}
+            {% for segment in all_segments %}
               {% if segment != "" %}
                 {% assign accumulated_path = accumulated_path | append: '/' | append: segment %}
                 <span class="separator">/</span>
-                
-                {% comment %} 判断是否最终路径段 {% endcomment %}
-                {% if forloop.last %}
-                  <span class="current-segment">
-                    {{ segment | replace: '-', ' ' | capitalize }}
-                  </span>
-                {% else %}
+                {% unless forloop.last %}
                   <a href="{{ accumulated_path | append: '/' | relative_url }}">
                     {{ segment | replace: '-', ' ' | capitalize }}
                   </a>
-                {% endif %}
+                {% else %}
+                  <span class="current-segment">
+                    {{ segment | replace: '-', ' ' | capitalize }}
+                  </span>
+                {% endunless %}
               {% endif %}
             {% endfor %}
           </nav>
@@ -47,7 +50,7 @@
         <div class="profile-link">
           <a href="https://github.com/rouge_3877" target="_blank">
             <svg class="github-icon" viewBox="0 0 16 16" width="16" height="16">
-              <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94..."/>
+              <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/>
             </svg>
             <span>GitHub Profile</span>
           </a>
